--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(to right, rgb(126, 32, 32), rgb(71, 3, 3));
+    background: linear-gradient(to right, blue, darkblue);
 }
 .container{
     display: flex;
@@ -14,7 +14,7 @@ body{
     background-color: rgb(39, 37, 37);
     margin-right: 20px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    background: linear-gradient(to right, rgb(126, 32, 32), rgb(71, 3, 3));
+    background: linear-gradient(to right, blue, darkblue);
 }
 .card{
     width: 300px;
